bhushan: changes in scheme, password, final calc

--- a/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
@@ -15,7 +15,8 @@
                             <div class="col-7">
                                 <input class="form-control" placeholder="Old Password" type="password"
                                     formControlName="oldPassword" autocomplete="off">
-                                <mat-error *ngIf="isControlHasError('oldPassword','required')">
+                                <mat-error
+                                    *ngIf="controls.oldPassword.errors?.required && controls.oldPassword.touched">
                                     <span>Enter Old Password</span>
                                 </mat-error>
                             </div>
@@ -28,15 +29,19 @@
                             <div class="col-7">
                                 <input class="form-control" placeholder="New Password" type="password"
                                     formControlName="newPassword" autocomplete="off">
-                                <mat-error *ngIf="isControlHasError('newPassword','required')">
-                                    <span>Enter New Password</span>
-                                </mat-error>
-                                <mat-error *ngIf="isControlHasError('newPassword','minlength')">
-                                    <span>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</span>
-                                </mat-error>
-                                <mat-error *ngIf="isControlHasError('newPassword','maxlength')">
-                                    <span>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</span>
-                                </mat-error>
+                                <div *ngIf="controls.newPassword.invalid && controls.newPassword.touched">
+
+                                    <mat-error *ngIf="controls.newPassword.errors?.required">
+                                        <span>Enter New Password</span>
+                                    </mat-error>
+                                    <mat-error *ngIf="controls.newPassword.errors?.minlength">
+                                        <span>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</span>
+                                    </mat-error>
+                                    <mat-error *ngIf="controls.newPassword.errors?.maxlength">
+                                        <span>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</span>
+                                    </mat-error>
+                                </div>
+
                             </div>
                         </div>
 
@@ -47,19 +52,23 @@
                             <div class="col-7">
                                 <input class="form-control" placeholder="Confirm Password" type="password"
                                     formControlName="confirmPassword" autocomplete="off">
-                                <mat-error *ngIf="isControlHasError('confirmPassword','required')">
-                                    <span>Enter Confirm Password</span>
-                                </mat-error>
-                                <mat-error *ngIf="isControlHasError('confirmPassword','minlength')">
-                                    <span>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</span>
-                                </mat-error>
-                                <mat-error *ngIf="isControlHasError('confirmPassword','maxlength')">
-                                    <span>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</span>
-                                </mat-error>
-                                <mat-error
-                                    *ngIf="passwordForm.get('confirmPassword').errors && passwordForm.get('confirmPassword').errors.ConfirmPassword">
-                                    <span>New Passsword and Confirm Password didn't match.</span>
-                                </mat-error>
+                                <div *ngIf="controls.confirmPassword.touched && controls.confirmPassword.invalid">
+
+                                    <mat-error *ngIf="controls.confirmPassword.errors?.required">
+                                        <span>Enter Confirm Password</span>
+                                    </mat-error>
+                                    <mat-error *ngIf="controls.confirmPassword.errors?.minlength">
+                                        <span>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</span>
+                                    </mat-error>
+                                    <mat-error *ngIf="controls.confirmPassword.errors?.maxlength">
+                                        <span>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</span>
+                                    </mat-error>
+                                    <mat-error
+                                        *ngIf="passwordForm.get('confirmPassword').errors && passwordForm.get('confirmPassword').errors.ConfirmPassword">
+                                        <span>New Passsword and Confirm Password didn't match.</span>
+                                    </mat-error>
+                                </div>
+
                             </div>
                         </div>
 
