--- a/gold-admin-frontend/src/app/views/pages/auth/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/change-password/change-password.component.html
@@ -32,13 +32,13 @@
 				<input class="login-form-input" placeholder="Confirm Password" type="password"
 					formControlName="confirmPassword">
 				<div *ngIf="controls.confirmPassword.invalid && controls.confirmPassword.touched">
-					<mat-error *ngIf="controls.confirmPassword.errors?.required">
+					<mat-error *ngIf="controls.confirmPassword.errors?.required && controls.confirmPassword.touched">
 						<strong>Enter Confirm Password</strong>
 					</mat-error>
-					<mat-error *ngIf="controls.confirmPassword.errors?.minlength">
+					<mat-error *ngIf="controls.confirmPassword.errors?.minlength && controls.confirmPassword.touched">
 						<strong>Minimum field length 8</strong>
 					</mat-error>
-					<mat-error *ngIf="controls.confirmPassword.errors?.maxlength">
+					<mat-error *ngIf="controls.confirmPassword.errors?.maxlength && controls.confirmPassword.touched">
 						<strong>Maximum field length 100</strong>
 					</mat-error>
 					<mat-error
