--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
@@ -90,6 +90,7 @@
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="currentLtvAmount"
                             placeholder="4,800">
+                        <mat-hint>This amount is 75% of the gold rate</mat-hint>
                     </div>
                 </div>
                 <div class="row kt-margin-t-30">
