--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -86,7 +86,7 @@
                             <p class="text-color font-weight-bold">180 Days</p>
                         </div>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-3">
                             <p class="text-color font-weight-bold mandatory">
                                 Rate of Interest <br>
@@ -106,7 +106,7 @@
                                 formControlName="interestRateOneHundredEightyDaysAnnually"
                                 [class.isError]="billingForm.get('interestRateOneHundredEightyDaysAnnually').touched && billingForm.get('interestRateOneHundredEightyDaysAnnually').invalid">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row kt-margin-t-20">
                         <div class="col-3">
                             <p class="text-color font-weight-bold mandatory">Select Partner Name</p>
