--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -8,12 +8,12 @@
                         <label class="text-color ">Ornament Type</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="Ring" formControlName="ornamentType" 
-                        [class.isError]="ornament.controls.ornamentType.touched && ornament.controls.ornamentType.invalid">
+                        <input type="text" class="form-control" placeholder="Ring" formControlName="ornamentType"
+                            [class.isError]="ornament.controls.ornamentType.touched && ornament.controls.ornamentType.invalid">
                         <mat-error
-                        *ngIf="ornament.controls.ornamentType.touched && ornament.controls.ornamentType.invalid">
-                        <span *ngIf="ornament.controls.ornamentType.errors?.required">Field Required</span>
-                    </mat-error>
+                            *ngIf="ornament.controls.ornamentType.touched && ornament.controls.ornamentType.invalid">
+                            <span *ngIf="ornament.controls.ornamentType.errors?.required">Field Required</span>
+                        </mat-error>
                     </div>
                 </div>
                 <div class="row kt-margin-t-15">
@@ -53,7 +53,7 @@
                             class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                             (click)="preview(ornament.controls.withOrnamentWeight.value,idx)">View
                             Image</label>
-                            <mat-error
+                        <mat-error
                             *ngIf="ornament.controls.withOrnamentWeight.touched && ornament.controls.withOrnamentWeight.invalid">
                             <span *ngIf="ornament.controls.withOrnamentWeight.errors?.required">Upload Image</span>
                         </mat-error>
@@ -75,12 +75,12 @@
                         <label class="my-auto text-color ">Acid Test</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.acidTest.value" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                        (click)="preview(ornament.controls.acidTest.value,idx)">View Image</label>
-                        <mat-error
-                        *ngIf="ornament.controls.acidTest.touched && ornament.controls.acidTest.invalid">
-                        <span *ngIf="ornament.controls.acidTest.errors?.required">Upload Image</span>
-                    </mat-error>
+                        <label *ngIf="ornament.controls.acidTest.value"
+                            class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
+                            (click)="preview(ornament.controls.acidTest.value,idx)">View Image</label>
+                        <mat-error *ngIf="ornament.controls.acidTest.touched && ornament.controls.acidTest.invalid">
+                            <span *ngIf="ornament.controls.acidTest.errors?.required">Upload Image</span>
+                        </mat-error>
                     </div>
                     <div class="col-4 text-right min-height-attach">
                         <input type="file" #acidTest class="d-none" (change)="uploadFile(idx,$event,'acidTest')">
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-8">
                         <select class="form-control" formControlName="karat" (change)="selectKarat(idx)"
-                        [class.isError]="ornament.controls.karat.touched && ornament.controls.karat.invalid">
+                            [class.isError]="ornament.controls.karat.touched && ornament.controls.karat.invalid">
                             <option value="" [disabled]="true" [selected]="true">Select Karat</option>
                             <option [value]="karat.value" *ngFor="let karat of karatArr">{{karat.name}}</option>
                         </select>
@@ -112,11 +112,12 @@
                     <div class="col-4 form-label">
                         <label class="my-auto text-color ">LTV Range</label>
                     </div>
-                    <div class="offset-6 col-2 form-label min-height-attach" >
-                        <label class="text-color w-100 m-auto">{{ltvPercent[0]}} &nbsp;- &nbsp;{{ltvPercent[ltvPercent.length-1]}}</label>
+                    <div class="offset-6 col-2 form-label min-height-attach">
+                        <label class="text-color w-100 m-auto">{{ltvPercent[0]}} &nbsp;-
+                            &nbsp;{{ltvPercent[ltvPercent.length-1]}}</label>
                     </div>
                 </div>
-                <div class="row kt-margin-t-15">
+                <div class="row kt-margin-t-30">
                     <div class="col-4 form-label">
                         <label class="my-auto text-color ">LTV %</label>
                     </div>
@@ -124,7 +125,7 @@
                         <select class="form-control" formControlName="ltvPercent" (change)="calculateLtvAmount(idx)"
                             [class.isError]="ornament.controls.ltvPercent.touched && ornament.controls.ltvPercent.invalid">
                             <option value="" [disabled]="true" [selected]="true">Select LTV %</option>
-                            <option  [value]="pure" *ngFor="let pure of ltvPercent;index as i">{{pure}} %</option>
+                            <option [value]="pure" *ngFor="let pure of ltvPercent;index as i">{{pure}} %</option>
                         </select>
                         <mat-error *ngIf="ornament.controls.ltvPercent.touched && ornament.controls.ltvPercent.invalid">
                             <span *ngIf="ornament.controls.ltvPercent.errors?.required">Field Required</span>
@@ -138,12 +139,11 @@
                         <label class="text-color ">Quantity</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="10" formControlName="quantity" numbersOnly 
-                        [class.isError]="ornament.controls.quantity.touched && ornament.controls.quantity.invalid">
-                        <mat-error
-                        *ngIf="ornament.controls.quantity.touched && ornament.controls.quantity.invalid">
-                        <span *ngIf="ornament.controls.quantity.errors?.required">Field Required</span>
-                    </mat-error>
+                        <input type="text" class="form-control" placeholder="10" formControlName="quantity" numbersOnly
+                            [class.isError]="ornament.controls.quantity.touched && ornament.controls.quantity.invalid">
+                        <mat-error *ngIf="ornament.controls.quantity.touched && ornament.controls.quantity.invalid">
+                            <span *ngIf="ornament.controls.quantity.errors?.required">Field Required</span>
+                        </mat-error>
                     </div>
                 </div>
                 <div class="row kt-margin-t-15">
@@ -164,12 +164,13 @@
                         <label class="my-auto text-color ">WM 00 wt.</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.weightMachineZeroWeight.value" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                        (click)="preview(ornament.controls.weightMachineZeroWeight.value,idx)">View Image</label>
+                        <label *ngIf="ornament.controls.weightMachineZeroWeight.value"
+                            class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
+                            (click)="preview(ornament.controls.weightMachineZeroWeight.value,idx)">View Image</label>
                         <mat-error
-                        *ngIf="ornament.controls.weightMachineZeroWeight.touched && ornament.controls.weightMachineZeroWeight.invalid">
-                        <span *ngIf="ornament.controls.weightMachineZeroWeight.errors?.required">Upload Image</span>
-                    </mat-error>
+                            *ngIf="ornament.controls.weightMachineZeroWeight.touched && ornament.controls.weightMachineZeroWeight.invalid">
+                            <span *ngIf="ornament.controls.weightMachineZeroWeight.errors?.required">Upload Image</span>
+                        </mat-error>
                     </div>
                     <div class="col-4 text-right min-height-attach">
                         <input type="file" #vm class="d-none" (change)="uploadFile(idx,$event,'vm')">
@@ -188,12 +189,12 @@
                         <label class="my-auto text-color ">Stone Touch</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.stoneTouch.value" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                        (click)="preview(ornament.controls.stoneTouch.value,idx)">View Image</label>
-                        <mat-error
-                        *ngIf="ornament.controls.stoneTouch.touched && ornament.controls.stoneTouch.invalid">
-                        <span *ngIf="ornament.controls.stoneTouch.errors?.required">Upload Image</span>
-                    </mat-error>
+                        <label *ngIf="ornament.controls.stoneTouch.value"
+                            class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
+                            (click)="preview(ornament.controls.stoneTouch.value,idx)">View Image</label>
+                        <mat-error *ngIf="ornament.controls.stoneTouch.touched && ornament.controls.stoneTouch.invalid">
+                            <span *ngIf="ornament.controls.stoneTouch.errors?.required">Upload Image</span>
+                        </mat-error>
                     </div>
                     <div class="col-4 text-right min-height-attach">
                         <input type="file" #stoneTouch class="d-none" (change)="uploadFile(idx,$event,'stoneTouch')">
@@ -211,12 +212,12 @@
                         <label class="my-auto text-color ">Purity Test</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.purityTest.value.length > 0" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                        (click)="preview(ornament.controls.purityTest.value,idx)">View Image</label>
-                        <mat-error
-                        *ngIf="ornament.controls.purityTest.touched && ornament.controls.purityTest.invalid">
-                        <span *ngIf="ornament.controls.purityTest.errors?.required">Upload Image</span>
-                    </mat-error>
+                        <label *ngIf="ornament.controls.purityTest.value.length > 0"
+                            class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
+                            (click)="preview(ornament.controls.purityTest.value,idx)">View Image</label>
+                        <mat-error *ngIf="ornament.controls.purityTest.touched && ornament.controls.purityTest.invalid">
+                            <span *ngIf="ornament.controls.purityTest.errors?.required">Upload Image</span>
+                        </mat-error>
                     </div>
                     <div class="col-4 text-right min-height-attach">
                         <input type="file" #purity class="d-none" (change)="uploadFile(idx,$event,'purity')">
@@ -243,7 +244,9 @@
                         <label class="my-auto text-color ">Current LTV Amt</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="100.00" formControlName="currentLtvAmount" readonly>
+                        <input type="text" class="form-control" placeholder="100.00" formControlName="currentLtvAmount"
+                            readonly>
+                        <mat-hint> 75% of current gold rate</mat-hint>
                     </div>
                 </div>
                 <div class="row kt-margin-t-15">
@@ -251,7 +254,8 @@
                         <label class="my-auto text-color ">LTV Amount</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" class="form-control" placeholder="100.00" formControlName="ltvAmount" readonly
+                        <input type="text" class="form-control" placeholder="100.00" formControlName="ltvAmount"
+                            readonly
                             [class.isError]="ornament.controls.ltvAmount.touched && ornament.controls.ltvAmount.invalid">
                         <mat-error *ngIf="ornament.controls.ltvAmount.touched && ornament.controls.ltvAmount.invalid">
                             <span *ngIf="ornament.controls.ltvAmount.errors?.pattern">Enter a valid Number</span>
@@ -270,12 +274,14 @@
                     <img class="w-100" [src]="ornament.controls.ornamentImage.value" alt="placeholder">
                 </div>
                 <div class="form-label">
-                    <label *ngIf="!ornament.controls.ornamentImage.value" class="my-auto m-auto ">Upload Ornaments Image</label>
+                    <label *ngIf="!ornament.controls.ornamentImage.value" class="my-auto m-auto ">Upload Ornaments
+                        Image</label>
                     <label *ngIf="ornament.controls.ornamentImage.value" class="my-auto text-danger m-auto kt-pointer"
                         (click)="removeImage('ornamentImage',idx)">Remove</label>
-                        <mat-error *ngIf="ornament.controls.ornamentImage.touched && ornament.controls.ornamentImage.invalid">
-                            <span *ngIf="ornament.controls.ornamentImage.errors?.required">Upload Image</span>
-                        </mat-error>
+                    <mat-error
+                        *ngIf="ornament.controls.ornamentImage.touched && ornament.controls.ornamentImage.invalid">
+                        <span *ngIf="ornament.controls.ornamentImage.errors?.required">Upload Image</span>
+                    </mat-error>
                 </div>
 
             </div>
