--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -253,6 +253,7 @@
                     <div class="col-8">
                         <input type="text" class="form-control" placeholder="100.00" formControlName="currentLtvAmount"
                             readonly>
+                        <span></span>
                     </div>
                 </div>
                 <div class="row kt-margin-t-15">
