--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
@@ -39,9 +39,15 @@
                 <div class="row kt-margin-t-15">
                   <div class="col-12 kt-margin-t-10" *ngFor="let category of permissions;index as Catidx">
                     <div *ngIf="category.isSelected">
-                    <p class=" text-color font-weight-500">{{category.categoryName | titlecase}}</p>
+                      <label class="custom-checkbox">
+                        <span
+                          class="label-checkbox text-color font-weight-500">{{category.categoryName | titlecase}}</span>
+                        <input type="checkbox" class="" id="view" (change)="selectParticularCat($event.target.checked,Catidx)"
+                        [checked]="subLength(Catidx)">
+                        <span class="checkmark top-0"  #sub></span>
+                      </label>
                     <div *ngFor="let sub of category.subCategory;index as Subidx"
-                      class="position-relative kt-margin-l-15">
+                      class="position-relative kt-margin-l-35">
                       <label class="custom-checkbox">
                         <span
                           class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{sub.subCategoryName | titlecase}}</span>
@@ -72,7 +78,16 @@
                       <div *ngFor="let sub of category.subCategory;last as las; first as fir;index as subIndex">
                         <div *ngIf="sub.isSelected">
                           <ul  class="tree" >
-                          <li class="text-color font-weight-500 kt-margin-l-15" [class.last]="las">{{sub.subCategoryName | titlecase}}
+                          <li class="text-color font-weight-500 kt-margin-l-15" [class.last]="las">
+                            <span class="position-relative ">
+                              <label class="custom-checkbox">
+                                <span
+                                  class="label-checkbox text-color font-weight-500 kt-margin-l-30">{{sub.subCategoryName | titlecase}}</span>
+                                <input type="checkbox" [checked]="productLength(catIndex,subIndex)"
+                                  (change)="selectParicularSubCatPro($event.target.checked,catIndex,subIndex)">
+                                <span class="checkmark top-0" #pro></span>
+                              </label>
+                            </span>
                         <div class="row justify-content-start kt-margin-l-40">
                           <div *ngFor="let product of sub.products;index as idx" class="col-4">
                                 <span class="position-relative ">
