--- a/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
@@ -37,19 +37,34 @@
                         <div class="col-4 form-label">
                             <label [class.mandatory]="isMandatory ">Percentage % </label>
                         </div>
-                        <div class="col-8">
-                            <input class="form-control" formControlName="percentage" autocomplete="off"
-                                placeholder="Enter Percentage"
-                                [class.isError]="controls.percentage.touched && controls.percentage.invalid">
-                            <mat-error *ngIf="controls.percentage.touched && controls.percentage.errors?.required">
+                        <div class="col-4">
+                            <input class="form-control" formControlName="fromPercentage" autocomplete="off"
+                                placeholder="from %"
+                                [class.isError]="controls.fromPercentage.touched && controls.fromPercentage.invalid">
+                            <mat-error
+                                *ngIf="controls.fromPercentage.touched && controls.fromPercentage.errors?.required">
                                 Required
                                 field</mat-error>
-                            <mat-error *ngIf="controls.percentage.touched && controls.percentage.errors?.pattern">
-                               it should be 0 to 100  
+                            <mat-error
+                                *ngIf="controls.fromPercentage.touched && controls.fromPercentage.errors?.pattern">
+                                it should be 0 to 100
+                            </mat-error>
+                        </div>
+                            <div class="col-4">
+                                <input class="form-control" formControlName="toPercentage" autocomplete="off"
+                                    placeholder="To %"
+                                    [class.isError]="controls.toPercentage.touched && controls.toPercentage.invalid">
+                                <mat-error
+                                    *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.required">
+                                    Required
+                                    field</mat-error>
+                                <mat-error
+                                    *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.pattern">
+                                    percentage is invalid
                                 </mat-error>
+                            </div>
                         </div>
                     </div>
-                </div>
             </form>
         </div>
     </div>
