--- a/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/list-karat-details/list-karat-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/list-karat-details/list-karat-details.component.html
@@ -8,9 +8,13 @@
                     <mat-header-cell *matHeaderCellDef>Karat</mat-header-cell>
                     <mat-cell *matCellDef="let data">{{data.karat}}</mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="percentage">
-                    <mat-header-cell *matHeaderCellDef>Percentage %</mat-header-cell>
-                    <mat-cell *matCellDef="let data">{{data.percentage}}</mat-cell>
+                <ng-container matColumnDef="fromPercentage">
+                    <mat-header-cell *matHeaderCellDef> From Percentage %</mat-header-cell>
+                    <mat-cell *matCellDef="let data">{{data.fromPercentage}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="toPercentage">
+                    <mat-header-cell *matHeaderCellDef> To Percentage %</mat-header-cell>
+                    <mat-cell *matCellDef="let data">{{data.toPercentage}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
@@ -27,7 +31,7 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             </mat-table>
 
-            <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
+            <div class="mat-table__message" *ngIf="logisticPartner.length==0" >No records found</div>
             <!-- Message for empty data  -->
  <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div> 
 </div> 
