--- a/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/karat-details/add-karat-details/add-karat-details.component.html
@@ -47,7 +47,7 @@
                                 field</mat-error>
                             <mat-error
                                 *ngIf="controls.fromPercentage.touched && controls.fromPercentage.errors?.pattern">
-                                it should be 0 to 100
+                                Invalid Percentage
                             </mat-error>
                         </div>
                             <div class="col-4">
@@ -60,7 +60,7 @@
                                     field</mat-error>
                                 <mat-error
                                     *ngIf="controls.toPercentage.touched && controls.toPercentage.errors?.pattern">
-                                    percentage is invalid
+                                    Invalid Percentage
                                 </mat-error>
                             </div>
                         </div>
