--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/merchant-list/merchant-list.component.html
@@ -25,7 +25,7 @@
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
 
-                    <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Mobile No</mat-header-cell>
                     <mat-cell *matCellDef="let merchant">
                         <div class="text-color">
                             {{merchant.user.mobileNumber}}
@@ -99,9 +99,9 @@
                     </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumns" [ngStyle]="{'width': '150%'}"></mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 
-                <mat-row *matRowDef="let row; columns: displayedColumns" [ngStyle]="{'width': '150%'}"></mat-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             </mat-table>
 
             <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
