--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
@@ -75,7 +75,7 @@
                                     </div>
                                     <div class="col-6">
                                         <input type="text" class="form-control" formControlName="lastName"
-                                            placeholder="First Name" ktAlphabets
+                                            placeholder="Last Name" ktAlphabets
                                             [class.isError]="controls.lastName.touched && controls.lastName.invalid">
                                         <mat-error
                                             *ngIf="controls.lastName.errors?.required && controls.lastName.touched">
