Add emi api path in services

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
@@ -6,8 +6,8 @@
                 <p class="pt-3"><span class="font-weight-bold kt-pointer" (click)="getProductReport()">Click Here</span>
                     To Download All Excel File</p>
 
-                <a *ngIf="!editUpload" href="" download>Click to download sample file</a>
-
+                <a *ngIf="!editUpload" href="assets/media/files/products.csv" download="products.csv">Click to download
+                    sample file</a>
                 <!-- <mat-icon aria-hidden="false" color="primary" aria-label="Example save icon">save</mat-icon>
                 <p style="color:blue;display:inline-block;margin-bottom: 10px;" (click)="exportAsXLSX()">Download
                     And Check Format Of Sample File
