--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -24,7 +24,7 @@
 
         <!-- MATERIAL TABLE | Binded to datasources -->
         <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
-        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
+        <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
                 <!-- Checkbox Column -->
@@ -45,27 +45,111 @@
                     </mat-cell>
                 </ng-container> -->
 
-                <ng-container matColumnDef="adminId">
-                    <mat-header-cell *matHeaderCellDef>Admin ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.id}}</mat-cell>
+                <ng-container matColumnDef="storeId">
+                    <mat-header-cell *matHeaderCellDef>Store Id</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['orderBy.broker.store.storeUniqueId'] ? element['orderBy.broker.store.storeUniqueId'] : '-'}}
+                    </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="email">
-                    <mat-header-cell *matHeaderCellDef>Email ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.user?.email}}</mat-cell>
+                <ng-container matColumnDef="centerCity">
+                    <mat-header-cell *matHeaderCellDef>Center City</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['customerDetails.customeraddress.city.name'] ? element['customerDetails.customeraddress.city.name'] : '-'}}
+                    </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="date">
-                    <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.createdAt | date:'yy-MM-dd'}} |
-                        {{element?.createdAt | date:'hh:mm:ss'}}</mat-cell>
+                <ng-container matColumnDef="shippingAddress">
+                    <mat-header-cell *matHeaderCellDef>Shipping Address</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['customerDetails.customeraddress.address'] ? element['customerDetails.customeraddress.address'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="memberId">
+                    <mat-header-cell *matHeaderCellDef>Member Id</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['customerDetails.customerUniqueId'] ? element['customerDetails.customerUniqueId'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="mobileNumber">
+                    <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['customerDetails.mobileNumber'] ? element['customerDetails.mobileNumber'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderId">
+                    <mat-header-cell *matHeaderCellDef>Order Id</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element['orderUniqueId'] ? element['orderUniqueId'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="productName">
+                    <mat-header-cell *matHeaderCellDef>Product Name</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['product.productName'] ? element['product.productName'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="weight">
+                    <mat-header-cell *matHeaderCellDef>Weight</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element['product.weight'] ? element['product.weight'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderTotalAmount">
+                    <mat-header-cell *matHeaderCellDef>Order Total Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['orderdetails.finalOrderPrice'] ? element['orderdetails.finalOrderPrice'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderInitialAmount">
+                    <mat-header-cell *matHeaderCellDef>Order Initial Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['orderdetails.initialPayment'] ? element['orderdetails.initialPayment'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderDate">
+                    <mat-header-cell *matHeaderCellDef>Order Date</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['createdAt'] ? (element['createdAt'] | date:'MMM d, y, h:mm:ss a') : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="emiTenure">
+                    <mat-header-cell *matHeaderCellDef>EMI Tenure</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['paymentType.paymentType'] ? element['paymentType.paymentType'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderQty">
+                    <mat-header-cell *matHeaderCellDef>Order Qty</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element['quantity'] ? element['quantity'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="invoiceNo">
+                    <mat-header-cell *matHeaderCellDef>Invoice No</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element['invoiceNumber'] ? element['invoiceNumber'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderStatus">
+                    <mat-header-cell *matHeaderCellDef>Order Status</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['orderCurrentStatus.statusName'] ? element['orderCurrentStatus.statusName'] : '-'}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderFrom">
+                    <mat-header-cell *matHeaderCellDef>Order From</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element['orderBy.broker.merchant.merchantName'] ? element['orderBy.broker.merchant.merchantName'] : '-'}}
+                    </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
-                    <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.action}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <div [ngStyle]="{'display': 'inherit'}">
+                            <div (click)="viewOrder(element)" class="kt-pointer"> View | &nbsp;</div>
+                            <div (click)="editOrder(element)" class="kt-pointer"> Edit</div>
+                        </div>
+                    </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumns" style="width: 240%;"></mat-header-row>
 
-                <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns" style="width: 240%;"></mat-row>
             </mat-table>
 
             <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
