--- a/gold-admin-frontend/src/app/views/pages/emi-management/config-details/admin-log/admin-log-list/admin-log-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/config-details/admin-log/admin-log-list/admin-log-list.component.html
@@ -55,7 +55,7 @@
                 </ng-container>
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.createdAt | date:'MMM d, y, h:mm:ss a'}}</mat-cell>
+                    <mat-cell *matCellDef="let element">{{element?.createdAt |  date:'medium'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
