--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
@@ -5,6 +5,9 @@
     .mat-column-date{
         flex: 0 0 8% !important;
     }
+    .mat-column-mobile{
+        flex: 0 0 8% !important;
+    }
     .mat-column-fullName{
         padding-left: 0 !important;
     }
