--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -6,7 +6,7 @@
     <img src="assets/media/icons/svg/General/filter.svg" height="20" width="20"></button>
 
   <div ngbDropdownMenu class="p-0" aria-labelledby="filterDropdown">
-    <div class="kt-filter-dropdown">
+    <div class="kt-filter-dropdown" [style.width]="filterWidth">
       <div class="kt-portlet m-0">
 
         <div class="kt-pointer d-none" (click)="filterDropdown.close()">
@@ -14,7 +14,7 @@
         </div>
 
         <!-- Product -->
-        <div class="kt-portlet__body">
+        <div class="kt-portlet__body" *ngIf="filterName =='product'">
           <div class="kt-form">
             <form [formGroup]="filterForm" *ngIf="filterName =='product'">
               <div class="form-group kt-form__group row">
@@ -57,6 +57,72 @@
                 </div>
               </div>
             </form>
+          </div>
+        </div>
+
+        <div class="kt-portlet__body" *ngIf="filterName == 'leads'">
+          <div class="kt-form">
+            <div class="row">
+              <div class="col">
+                <label>By Location</label>
+                <!-- <select class="form-control" name="categoryId">
+                  <option value="" [selected]="true">Select State</option>
+                  <option *ngFor="let item of states" [value]="item?.id">
+                    {{item?.name}}
+                  </option>
+                </select> -->
+                <ng-select #select [items]="states" [dropdownPosition]="'bottom'" [multiple]="true" bindLabel="name"
+                  bindValue="id" [closeOnSelect]="false" [searchable]="false">
+                  <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index">
+                    <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                      [ngModelOptions]="{ standalone : true }" /> {{item.gender | uppercase}}
+                  </ng-template>
+                  <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
+                    <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected"
+                      [ngModelOptions]="{ standalone : true }" /> {{item.name}}
+                  </ng-template>
+                  <ng-template ng-label-tmp>
+                    <span style="display:block; color: #000;" class="ng-placeholder">Select items</span>
+                  </ng-template>
+                  <ng-template ng-header-tmp>
+                    <input style="width: 100%; line-height: 24px" type="text"
+                      (input)="select.filter($event.target.value)" />
+                  </ng-template>
+                </ng-select>
+                <!-- <ng-select [items]="states" [multiple]="true" [dropdownPosition]="'bottom'" bindLabel="name" groupBy="gender" [selectableGroup]="true"
+                  [closeOnSelect]="false" bindValue="id">
+                  <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index">
+                    <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected" /> {{item.gender | uppercase}}
+                  </ng-template>
+                  <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
+                    <input id="item-{{index}}" type="checkbox" [ngModel]="item$.selected" /> {{item.name}}
+                  </ng-template>
+                </ng-select> -->
+
+              </div>
+              <div class="col">
+                <label style="visibility: hidden;">nostatus</label>
+                <select class="form-control" name="categoryId">
+                  <option value="" [selected]="true">Select City</option>
+                  <option *ngFor="let item of categoryList" [value]="item?.id">
+                    {{item?.categoryName}}
+                  </option>
+                </select>
+              </div>
+              <div class="col">
+                <label>By Status</label>
+                <select class="form-control" name="categoryId">
+                  <option value="" [selected]="true">Select Category</option>
+                  <option *ngFor="let item of categoryList" [value]="item?.id">
+                    {{item?.categoryName}}
+                  </option>
+                </select>
+              </div>
+              <div class="col-2 d-flex align-items-end">
+                <label></label>
+                <kt-button [value]="'Apply'" [type]="'button'"></kt-button>
+              </div>
+            </div>
           </div>
         </div>
 
