--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -27,7 +27,7 @@
         <div class="col-2 text-right">
             <kt-button *ngIf="rightButton" [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
             <kt-filter *ngIf="showfilter" (filterApplyEvent)="applyFilter($event)" [filterName]="filterName"
-                [listType]="listType"></kt-filter>
+                [listType]="listType" [filterWidth]="filterWidth"></kt-filter>
         </div>
     </div>
 </div>
